add component modal

--- a/style.css
+++ b/style.css
@@ -160,9 +160,9 @@ fieldset b, .remember-password {
     color: white;
 }
 
-.btn-add {
-    padding: 8px 60px;
-}
+/*.btn-add {*/
+/*    padding: 8px 60px;*/
+/*}*/
 
 .footer {
     color: grey;
