--- a/style/style.sass
+++ b/style/style.sass
@@ -475,3 +475,10 @@ fieldset b, .remember-password
   width: 10px
   height: 10px
   background: transparent
+
+
+//theme
+.bg
+  background: #030130 !important
+  border: 1px solid #030130 !important
+  color: white !important
