--- a/style/style.sass
+++ b/style/style.sass
@@ -8,9 +8,38 @@
 body, .header
   background: #F2F2F2
 
+
 .add-product
+  position: relative
+
   input, textarea
     background: #F2F2F2
+
+  fieldset
+    position: relative
+    margin-top: 5px
+
+  input, select, button
+    font-size: 12px !important
+
+  input:invalid + span:after
+    position: absolute
+    content: '✖'
+    padding-left: 5px
+    color: #8b0000
+    font-size: 12px
+    top: 5px
+
+  input:valid + span:after
+    position: absolute
+    content: '✓'
+    padding-left: 5px
+    color: #009000
+
+  .validity
+    position: absolute
+    right: 25px
+    top: 25px
 
 .registration input, .login input
   background: #F2F2F2
@@ -49,19 +78,10 @@ body
     font-size: 12px !important
     height: 50px !important
 
-.add-product
-  input, select, button
-    font-size: 12px !important
-    height: 50px !important
-
-#Photo, #Flag
-  padding: 20px
 
 i
   font-size: 24px
 
-fieldset
-  margin-top: 5px
 
 .login .row div, .registration .row div, .add-product .row, .main .bg-light
   border-radius: 5px
@@ -70,9 +90,6 @@ fieldset
 
 .login .link, .registration .link, textarea
   font-size: 12px !important
-
-.search input
-  height: 38px
 
 .heart
   width: 35px
@@ -123,15 +140,12 @@ label
   text-decoration: none
   font-size: 20px
 
-.add-product
-  position: relative
-
 .close .clear-filters
   font-size: 15px !important
 
 .close-comp-add-prod
   position: absolute
-  top: 0
+  top: 10px
   right: 25px
 
 .scale
@@ -395,6 +409,9 @@ fieldset b, .remember-password
     overflow: hidden
     height: 200px
 
+  .w-lg-100
+    width: 100% !important
+
 
 @media (min-width: 768px) and (max-width: 991px)
   .heart
@@ -403,6 +420,9 @@ fieldset b, .remember-password
   .scale
     overflow: hidden
     height: 175px
+
+  .w-md-100
+    width: 100% !important
 
 @media (min-width: 576px) and (max-width: 767px)
   .heart
@@ -418,6 +438,9 @@ fieldset b, .remember-password
   #mobile-menu
     z-index: 5
 
+  .w-sm-100
+    width: 100% !important
+
 
 @media (min-width: 300px) and (max-width: 575px)
   .main, .add-product
@@ -425,6 +448,9 @@ fieldset b, .remember-password
 
   #mobile-menu
     z-index: 5
+
+  .w-sm-100
+    width: 100% !important
 
 /*style scroll*/
 ::-webkit-scrollbar
