--- a/style/style.sass
+++ b/style/style.sass
@@ -317,12 +317,16 @@ fieldset b, .remember-password
 .position-fieldset
   position: relative
 
-.form
+form
   position: relative
 
-  small
+.login  small
     position: absolute
-    bottom: 75px
+    bottom: 48px
+
+.registration  small
+    position: absolute
+    bottom: 38px
 
 .user
   position: relative
