--- a/style/style.css
+++ b/style/style.css
@@ -3,16 +3,6 @@
   display: none;
 }
 
-.fade-enter-active,
-.fade-leave-active {
-  transition: opacity 0.5s;
-}
-
-.fade-enter,
-.fade-leave-to {
-  opacity: 0;
-}
-
 * {
   box-sizing: border-box;
   font-family: Helvetica;
@@ -29,8 +19,8 @@
 .favorite-comp,
 .cart-comp,
 .main {
-  margin-top: 125px;
-  min-height: 73vh;
+  margin-top: 100px;
+  min-height: calc(93vh - 100px);
 }
 .add-product .container,
 .favorite-comp .container,
@@ -226,12 +216,6 @@ label {
   font-size: 15px !important;
 }
 
-.close-comp-add-prod {
-  position: absolute;
-  top: 10px;
-  right: 25px;
-}
-
 .scale {
   overflow: hidden;
   height: 225px;
@@ -266,10 +250,14 @@ label {
   box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.2);
 }
 
-.removeCartItem {
+.add-product .row {
+  position: relative;
+}
+
+.removeCartItem, .close-comp-add-prod {
   position: absolute;
-  top: 27px;
-  right: 0;
+  top: 15px;
+  right: 15px;
 }
 
 .flag {
@@ -518,24 +506,57 @@ form {
     opacity: 0;
   }
 }
-@media (min-width: 1200px) and (max-width: 1400px) {
+.back-to-top {
+  display: inline;
+  opacity: 0;
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
+  z-index: 99999;
+  text-decoration: none;
+}
+
+.back-to-top span {
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  background: #F2F2F2;
+  color: #152036;
+  border-radius: 10px;
+}
+
+@media screen and (max-width: 1400px) {
   .login, .registration {
-    min-height: 94vh;
+    min-height: 92vh;
   }
 
-  .add-product, .favorite-comp, .cart-comp, .main {
-    margin-top: 125px;
-    min-height: 73vh;
+  .add-product,
+.favorite-comp,
+.cart-comp {
+    margin-top: 100px;
+    min-height: calc(92vh - 100px);
+  }
+
+  .main {
+    margin-top: 100px;
+    min-height: 78vh;
   }
 }
-@media (min-width: 992px) and (max-width: 1199px) {
+@media screen and (max-width: 1200px) {
   .login, .registration {
-    min-height: 94vh;
+    min-height: 92vh;
   }
 
-  .add-product, .favorite-comp, .cart-comp, .main {
-    margin-top: 125px;
-    min-height: 84vh;
+  .add-product,
+.favorite-comp,
+.cart-comp {
+    margin-top: 100px;
+    min-height: calc(92vh - 100px);
+  }
+
+  .main {
+    margin-top: 100px;
+    min-height: 78vh;
   }
 
   .heart {
@@ -551,14 +572,21 @@ form {
     width: 100% !important;
   }
 }
-@media (min-width: 768px) and (max-width: 991px) {
+@media screen and (max-width: 992px) {
   .login, .registration {
-    min-height: 93vh;
+    min-height: 92vh;
   }
 
-  .add-product, .favorite-comp, .cart-comp, .main {
-    margin-top: 125px;
-    min-height: 80vh;
+  .add-product,
+.favorite-comp,
+.cart-comp {
+    margin-top: 100px;
+    min-height: calc(92vh - 100px);
+  }
+
+  .main {
+    margin-top: 100px;
+    min-height: 78vh;
   }
 
   .heart {
@@ -574,14 +602,21 @@ form {
     width: 100% !important;
   }
 }
-@media (min-width: 576px) and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .login, .registration {
-    min-height: 91vh;
+    min-height: 92vh;
   }
 
-  .add-product, .favorite-comp, .cart-comp, .main {
+  .add-product,
+.favorite-comp,
+.cart-comp {
     margin-top: 100px;
-    min-height: 78vh;
+    min-height: calc(92vh - 100px);
+  }
+
+  .main {
+    margin-top: 100px;
+    min-height: 80vh;
   }
 
   .heart {
@@ -601,14 +636,21 @@ form {
     width: 100% !important;
   }
 }
-@media (min-width: 300px) and (max-width: 575px) {
+@media screen and (max-width: 576px) {
   .login, .registration {
-    min-height: 88vh;
+    min-height: 91vh;
   }
 
-  .add-product, .favorite-comp, .cart-comp, .main {
-    margin-top: 100px;
-    min-height: 86vh;
+  .add-product,
+.favorite-comp,
+.cart-comp {
+    margin-top: 80px;
+    min-height: calc(92vh - 80px);
+  }
+
+  .main {
+    margin-top: 80px;
+    min-height: 80vh;
   }
 
   #mobile-menu {
