--- a/style/style.sass
+++ b/style/style.sass
@@ -1,14 +1,6 @@
 [v-cloak]
   display: none
 
-.fade-enter-active,
-.fade-leave-active
-  transition: opacity .5s
-
-.fade-enter,
-.fade-leave-to
-  opacity: 0
-
 *
   box-sizing: border-box
   font-family: Helvetica
@@ -20,13 +12,12 @@
   left: 0
   right: 0
 
-
 .add-product,
 .favorite-comp,
 .cart-comp,
 .main
-  margin-top: 125px
-  min-height: 73vh
+  margin-top: 100px
+  min-height: calc(93vh - 100px)
 
   .container
     position: relative
@@ -166,11 +157,6 @@ label
 .close .clear-filters
   font-size: 15px !important
 
-.close-comp-add-prod
-  position: absolute
-  top: 10px
-  right: 25px
-
 .scale
   overflow: hidden
   height: 225px
@@ -200,10 +186,13 @@ label
     -webkit-box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.2)
     box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.2)
 
-.removeCartItem
+.add-product .row
+  position: relative
+
+.removeCartItem, .close-comp-add-prod
   position: absolute
-  top: 27px
-  right: 0
+  top: 15px
+  right: 15px
 
 .flag
   width: 25px
@@ -320,13 +309,13 @@ fieldset b, .remember-password
 form
   position: relative
 
-.login  small
-    position: absolute
-    bottom: 48px
+.login small
+  position: absolute
+  bottom: 48px
 
-.registration  small
-    position: absolute
-    bottom: 38px
+.registration small
+  position: absolute
+  bottom: 38px
 
 .user
   position: relative
@@ -429,23 +418,52 @@ form
   100%
     opacity: 0
 
+.back-to-top
+  display: inline
+  opacity: 0
+  position: fixed
+  right: 15px
+  bottom: 15px
+  z-index: 99999
+  text-decoration: none
 
-@media (min-width: 1200px) and (max-width: 1400px)
+.back-to-top span
+  font-size: 24px
+  width: 40px
+  height: 40px
+  background: #F2F2F2
+  color: #152036
+  border-radius: 10px
+
+
+@media screen and (max-width: 1400px)
   .login, .registration
-    min-height: 94vh
+    min-height: 92vh
 
-  .add-product, .favorite-comp, .cart-comp, .main
-    margin-top: 125px
-    min-height: 73vh
+  .add-product,
+  .favorite-comp,
+  .cart-comp
+    margin-top: 100px
+    min-height: calc(92vh - 100px)
+
+  .main
+    margin-top: 100px
+    min-height: 78vh
 
 
-@media (min-width: 992px) and (max-width: 1199px)
+@media screen and (max-width: 1200px)
   .login, .registration
-    min-height: 94vh
+    min-height: 92vh
 
-  .add-product, .favorite-comp, .cart-comp, .main
-    margin-top: 125px
-    min-height: 84vh
+  .add-product,
+  .favorite-comp,
+  .cart-comp
+    margin-top: 100px
+    min-height: calc(92vh - 100px)
+
+  .main
+    margin-top: 100px
+    min-height: 78vh
 
   .heart
     top: 185px !important
@@ -457,13 +475,19 @@ form
   .w-lg-100
     width: 100% !important
 
-@media (min-width: 768px) and (max-width: 991px)
+@media screen and (max-width: 992px)
   .login, .registration
-    min-height: 93vh
+    min-height: 92vh
 
-  .add-product, .favorite-comp, .cart-comp, .main
-    margin-top: 125px
-    min-height: 80vh
+  .add-product,
+  .favorite-comp,
+  .cart-comp
+    margin-top: 100px
+    min-height: calc(92vh - 100px)
+
+  .main
+    margin-top: 100px
+    min-height: 78vh
 
   .heart
     top: 160px !important
@@ -475,13 +499,19 @@ form
   .w-md-100
     width: 100% !important
 
-@media (min-width: 576px) and (max-width: 767px)
+@media screen and (max-width: 768px)
   .login, .registration
-    min-height: 91vh
+    min-height: 92vh
 
-  .add-product, .favorite-comp, .cart-comp, .main
+  .add-product,
+  .favorite-comp,
+  .cart-comp
     margin-top: 100px
-    min-height: 78vh
+    min-height: calc(92vh - 100px)
+
+  .main
+    margin-top: 100px
+    min-height: 80vh
 
   .heart
     top: 135px !important
@@ -496,13 +526,19 @@ form
   .w-sm-100
     width: 100% !important
 
-@media (min-width: 300px) and (max-width: 575px)
+@media screen and (max-width: 576px)
   .login, .registration
-    min-height: 88vh
+    min-height: 91vh
 
-  .add-product, .favorite-comp, .cart-comp, .main
-    margin-top: 100px
-    min-height: 86vh
+  .add-product,
+  .favorite-comp,
+  .cart-comp
+    margin-top: 80px
+    min-height: calc(92vh - 80px)
+
+  .main
+    margin-top: 80px
+    min-height: 80vh
 
   #mobile-menu
     z-index: 5
