--- a/style/style.css
+++ b/style/style.css
@@ -212,6 +212,13 @@ label {
   text-decoration: none;
 }
 
+.close-filters {
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  width: 23%;
+}
+
 .close .clear-filters {
   font-size: 15px !important;
 }
@@ -408,6 +415,9 @@ form {
   cursor: pointer;
 }
 
+.search {
+  position: relative;
+}
 .search label {
   font-size: 12px;
 }
@@ -635,6 +645,13 @@ form {
   .w-sm-100 {
     width: 100% !important;
   }
+
+  .close-filters {
+    position: absolute;
+    top: 5px;
+    right: 0;
+    width: 100%;
+  }
 }
 @media screen and (max-width: 576px) {
   .login, .registration {
@@ -756,6 +773,10 @@ form {
 }
 .bg-dark .remember-pass {
   color: white;
+}
+.bg-dark .active {
+  background: #152036 !important;
+  font-weight: 700;
 }
 
 /*# sourceMappingURL=style.css.map */
